ice caves demiplane

--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/MapLight/mapLight.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/MapLight/mapLight.yml
@@ -40,7 +40,7 @@
     MapLight: 1
   components:
   - type: MapLight
-    ambientLightColor: "#031f04"
+    ambientLightColor: "#000502"
 
 - type: cp14DemiplaneModifier
   id: MapLightDarkNight
