--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/crystals.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/crystals.yml
@@ -119,8 +119,7 @@
   categories:
     Reward: 0.1
   requiredTags:
-  - CP14DemiplaneWater
-    #TODO Cold places filter
+  - CP14DemiplaneCold
   layers:
     - !type:OreDunGen
       tileMask:
