--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/misc.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/misc.yml
@@ -15,6 +15,9 @@
       entity: CP14Chasm
       tileMask:
       - CP14FloorBase
+      - CP14FloorSnow
+      - CP14FloorSnowDeep
+      - CP14FloorSnowDeepDeep
       count: 5
       minGroupSize: 2
       maxGroupSize: 5
