--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
@@ -66,6 +66,19 @@
       minGroupSize: 2
       maxGroupSize: 3
 
+- type: cp14DemiplaneModifier
+  id: XenoTurret
+  tiers:
+    - 1
+  categories:
+    Danger: 0.3
+  layers:
+    - !type:OreDunGen
+      entity: CP14XenoTurret
+      count: 6
+      minGroupSize: 1
+      maxGroupSize: 1
+
 # TIER 2
 
 - type: cp14DemiplaneModifier
