ice caves demiplane (#817)
* ice caves demiplane

* more things can spawn on snow

* Update base.yml

* fix guidebook quartz

* ice island demiplane

* xeno turret demiplane mobs

--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
@@ -66,6 +66,19 @@
       minGroupSize: 2
       maxGroupSize: 3
 
+- type: cp14DemiplaneModifier
+  id: XenoTurret
+  tiers:
+    - 1
+  categories:
+    Danger: 0.3
+  layers:
+    - !type:OreDunGen
+      entity: CP14XenoTurret
+      count: 6
+      minGroupSize: 1
+      maxGroupSize: 1
+
 # TIER 2
 
 - type: cp14DemiplaneModifier
@@ -94,9 +107,23 @@
   - CP14DemiplaneUnderground
   layers:
     - !type:OreDunGen
-      tileMask: 
-      - CP14FloorBase
       entity: CP14MobMonsterMole
+      count: 6
+      minGroupSize: 1
+      maxGroupSize: 2
+
+- type: cp14DemiplaneModifier
+  id: EnemyIceSpectre
+  tiers:
+    - 2
+  name: cp14-modifier-zombie
+  categories:
+    Danger: 0.4
+  requiredTags:
+  - CP14DemiplaneCold
+  layers:
+    - !type:OreDunGen
+      entity: CP14MobIceSpectre
       count: 6
       minGroupSize: 1
       maxGroupSize: 2
