--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -2,7 +2,7 @@
   id: CP14CopperBar1
   tag: CP14RecipeMeltingFurnace
   craftTime: 4
-  entities:
+  stacks:
     CP14OreCopper: 4
   result: CP14CopperBar1
   knowledgeRequired: MetallMelting
@@ -11,7 +11,7 @@
   id: CP14IronBar1
   tag: CP14RecipeMeltingFurnace
   craftTime: 4
-  entities:
+  stacks:
     CP14OreIron: 4
   result: CP14IronBar1
   knowledgeRequired: MetallMelting
@@ -20,7 +20,7 @@
   id: CP14GoldBar1
   tag: CP14RecipeMeltingFurnace
   craftTime: 4
-  entities:
+  stacks:
     CP14OreGold: 4
   result: CP14GoldBar1
   knowledgeRequired: MetallMelting
@@ -29,7 +29,7 @@
   id: CP14MithrilBar1
   tag: CP14RecipeMeltingFurnace
   craftTime: 4
-  entities:
+  stacks:
     CP14OreMithril: 4
   result: CP14MithrilBar1
   knowledgeRequired: MetallMelting
