--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -1,9 +1,5 @@
 # <---> CrystallEdge migration zone
 
-# 2024-08-22
-CP14PloughedGround: CP14SeedbedWooden
-CP14SeedbedDefault: CP14SeedbedWooden
-
 # 2024-08-24
 CP14DungeonEntrance: CP14LaddersDownStoneAutoLink
 CP14DungeonExit: CP14LaddersUpStoneAutoLink
@@ -237,6 +233,12 @@ CP14CrystalDiamondsBig: CP14CrystalElementalLightBig
 
 CP14QuartzCrystal: null
 CP14QuartzShard: null
+
+#2025-30-01
+CP14OreCopper: CP14OreCopper1
+CP14OreIron: CP14OreIron1
+CP14OreGold: CP14OreGold1
+CP14OreMithril: CP14OreMithril1
 
 # <---> CrystallEdge migration zone end
 
