--- a/Resources/Prototypes/_CP14/Recipes/Workbench/Anvil/modular_blade.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/Anvil/modular_blade.yml
@@ -5,37 +5,49 @@
   id: CP14ModularBladeIronDagger
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronDagger
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldDagger
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldDagger
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperDagger
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperDagger
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilDagger
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilDagger
-  knowledgeRequired: MetallForging
 
 # Spear
 
@@ -43,37 +55,49 @@
   id: CP14ModularBladeIronSpear
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronSpear
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperSpear
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperSpear
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldSpear
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldSpear
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilSpear
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilSpear
-  knowledgeRequired: MetallForging
 
 # Mace
 
@@ -81,37 +105,49 @@
   id: CP14ModularBladeIronMace
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronMace
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldMace
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldMace
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperMace
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperMace
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilMace
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilMace
-  knowledgeRequired: MetallForging
 
 # Sword
 
@@ -119,37 +155,49 @@
   id: CP14ModularBladeIronSword
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14IronBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronSword
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldSword
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldSword
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperSword
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperSword
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilSword
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14MithrilBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilSword
-  knowledgeRequired: MetallForging
 
 # Sickle
 
@@ -157,37 +205,49 @@
   id: CP14ModularBladeIronSickle
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronSickle
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperSickle
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperSickle
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldSickle
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldSickle
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilSickle
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilSickle
-  knowledgeRequired: MetallForging
 
 # Shovel
 
@@ -195,38 +255,50 @@
   id: CP14ModularBladeIronShovel
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronShovel
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldShovel
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldShovel
-  knowledgeRequired: MetallForging
 
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperShovel
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperShovel
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilShovel
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilShovel
-  knowledgeRequired: MetallForging
 
 # Pickaxe
 
@@ -234,37 +306,49 @@
   id: CP14ModularBladeIronPickaxe
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronPickaxe
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldPickaxe
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldPickaxe
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperPickaxe
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperPickaxe
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilPickaxe
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilPickaxe
-  knowledgeRequired: MetallForging
 
 # Grip
 
@@ -272,37 +356,49 @@
   id: CP14ModularGripIron
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripIron
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripCopper
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripCopper
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripGolden
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripGolden
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripMithril
   tag: CP14RecipeAnvil
   craftTime: 2
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripMithril
-  knowledgeRequired: MetallForging
 
 # Grip long
 
@@ -310,37 +406,49 @@
   id: CP14ModularGripIronLong
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14IronBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripIronLong
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripCopperLong
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripCopperLong
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripGoldLong
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripGoldLong
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripMithrilLong
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14MithrilBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularGripMithrilLong
-  knowledgeRequired: MetallForging
 
 # Rapier
 
@@ -348,37 +456,49 @@
   id: CP14ModularBladeIronRapier
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14IronBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronRapier
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldRapier
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldRapier
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperRapier
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperRapier
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilRapier
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14MithrilBar: 1
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 1
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilRapier
-  knowledgeRequired: MetallForging
 
 # Axe
 
@@ -386,37 +506,49 @@
   id: CP14ModularBladeIronAxe
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14IronBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronAxe
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperAxe
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperAxe
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldAxe
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldAxe
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilAxe
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14MithrilBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilAxe
-  knowledgeRequired: MetallForging
 
 # Hammer
 
@@ -424,35 +556,47 @@
   id: CP14ModularBladeIronHammer
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14IronBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14IronBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeIronHammer
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperHammer
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14CopperBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeCopperHammer
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldHammer
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14GoldBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14GoldBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeGoldHammer
-  knowledgeRequired: MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilHammer
   tag: CP14RecipeAnvil
   craftTime: 4
-  stacks:
-    CP14MithrilBar: 2
+  requirements:
+  - !type:StackResource
+    stack: CP14MithrilBar
+    count: 2
+  - !type:KnowledgeRequired
+    knowledge: MetallForging
   result: CP14ModularBladeMithrilHammer
-  knowledgeRequired: MetallForging
   
