--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/bars.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/bars.yml
@@ -22,7 +22,9 @@
     - bar
     - bar_2
     - bar_3
-  - type: Material
+  - type: CP14Material
+    materials:
+      CP14Copper: 10
 
 - type: entity
   id: CP14CopperBar5
@@ -66,7 +68,9 @@
     - bar
     - bar_2
     - bar_3
-  - type: Material
+  - type: CP14Material
+    materials:
+      CP14Iron: 10
 
 - type: entity
   id: CP14IronBar5
@@ -109,7 +113,9 @@
     - bar
     - bar_2
     - bar_3
-  - type: Material
+  - type: CP14Material
+    materials:
+      CP14Gold: 10
 
 - type: entity
   id: CP14GoldBar5
@@ -151,7 +157,6 @@
     - glass
     - glass_2
     - glass_3
-  - type: Material
 
 - type: entity
   id: CP14GlassSheet5
@@ -192,7 +197,9 @@
     - bar
     - bar_2
     - bar_3
-  - type: Material
+  - type: CP14Material
+    materials:
+      CP14Mithril: 10
 
 - type: entity
   id: CP14MithrilBar5
