--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/scrap.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/scrap.yml
@@ -24,6 +24,9 @@
     layers:
       - state: scrap
         map: ["random"]
+  - type: CP14Material
+    materials:
+      CP14Copper: 5
 
 - type: entity
   id: CP14ScrapIron
@@ -36,6 +39,9 @@
     layers:
       - state: scrap
         map: ["random"]
+  - type: CP14Material
+    materials:
+      CP14Iron: 5
 
 - type: entity
   id: CP14ScrapGold
@@ -48,6 +54,9 @@
     layers:
       - state: scrap
         map: ["random"]
+  - type: CP14Material
+    materials:
+      CP14Gold: 5
 
 - type: entity
   id: CP14ScrapMithril
@@ -60,3 +69,6 @@
     layers:
       - state: scrap
         map: ["random"]
+  - type: CP14Material
+    materials:
+      CP14Mithril: 5
